--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # ===== Hostinger MySQL Database Configuration =====
 # Update these values with your Hostinger database credentials
 
-DB_HOST=localhost
+DB_HOST=srv2109.hstgr.io
 DB_PORT=3306
-DB_USER=your_hostinger_db_user
-DB_PASSWORD=your_hostinger_db_password
-DB_NAME=your_hostinger_db_name
+DB_USER=u261758575_nmims
+DB_PASSWORD=m3@G$HxmAr?C
+DB_NAME=u261758575_nmims
 
 # Server
 PORT=3000
